Managed to keep transaction alive for Ingredient